# OOP_lab_4

./: CMakeLists.txt
include/: classes.h
src/: classes.cpp  main.cpp
tests/: test_cases.cpp
